--- a/fabric/build.gradle
+++ b/fabric/build.gradle
@@ -15,6 +15,33 @@ configurations {
     developmentFabric.extendsFrom common
 }
 
+sourceSets {
+    main {
+        resources {
+            srcDir("src/generated/resources")
+            exclude("**/.cache")
+        }
+    }
+}
+
+loom {
+    Project common = project(":common")
+
+    runs {
+        datagen {
+            client()
+
+            name "Minecraft Data"
+            vmArg "-Dfabric-api.datagen"
+            vmArg "-Dfabric-api.datagen.output-dir=${common.file("src/generated/resources")}"
+            vmArg "-Dfabric-api.datagen.modid=logic_n_control"
+            vmArg "-Dporting_lib.datagen.existing_resources=${common.file("src/main/resources")}"
+
+            environmentVariable("DATAGEN", "TRUE")
+        }
+    }
+}
+
 repositories {
     maven { url "https://maven.shedaniel.me/" }
     maven { url = "https://api.modrinth.com/maven" } // LazyDFU
