--- a/forge/build.gradle
+++ b/forge/build.gradle
@@ -7,6 +7,8 @@ architectury {
     forge()
 }
 
+def generatedResources = file("src/generated")
+
 configurations {
     common
     shadowCommon // Don't use shadow from the shadow plugin because we don't want IDEA to index this.
@@ -23,6 +25,23 @@ repositories {
         content {
             includeGroup("com.tterrag.registrate")
             includeGroup("com.simibubi.create")
+        }
+    }
+}
+
+loom {
+    runs {
+        data {
+            data()
+            name "Forge Datagen"
+
+            programArgs "--all", "--mod", "logic_n_control"
+            vmArg '-Dforge.logging.markers=REGISTRIES'
+            vmArg '-Dforge.logging.console.level=debug'
+            programArgs "--output", "${project.rootProject.file("forge/src/generated/resources")}"
+            programArgs "--existing", "${project.rootProject.file("common/src/main/resources")}"
+            programArgs "--existing-mod", "create"
+            programArgs "--flat"
         }
     }
 }
