--- a/gradle.properties
+++ b/gradle.properties
@@ -5,9 +5,9 @@ org.gradle.caching=true
 fabric.loom.disableProjectDependentMods = true
 
 # Mod Info
-modid = examplemod
+modid = logic_n_control
 mod_version = 0.0.1
-maven_group = net.examplegroup.examplemod
+maven_group = anthxny.logic_n_control
 
 # the mc version to compile against (see their respective property files for version-specific stuff)
 mcVer=1.20.1
